--- a/app/views/sub_categories/show.html.erb
+++ b/app/views/sub_categories/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @sub_category.category %>
+  <%= @sub_category.category.name %>
 </p>
 
 <%= link_to 'Edit', edit_sub_category_path(@sub_category) %> |
