--- a/app/views/devise/registrations/_modal.html.erb
+++ b/app/views/devise/registrations/_modal.html.erb
@@ -5,40 +5,69 @@
       <%= devise_error_messages! %>
 
       <div class="field">
-        <%= f.label :name, class: "h3" %>
-        <%= f.text_field :name, class: 'login-input' %>
+        <div class="row">
+          <div class="col-2">
+            <%= f.label :name, class: "h3" %>
+          </div>
+          <div class="col-10">
+            <%= f.text_field :name, class: 'login-input' %>
+          </div>
+        </div>
       </div>
 
       <div class="field">
-        <%= f.label :email, class: "h3" %>
-        <%= f.email_field :email, autofocus: true, class: 'login-input' %>
+        <div class="row">
+          <div class="col-2">
+            <%= f.label :email, class: "h3" %>
+          </div>
+          <div class="col-10">
+            <%= f.email_field :email, autofocus: true, class: 'login-input' %>
+          </div>
+        </div>
       </div>
 
       <div class="field">
-        <%= f.label :phone_number, class: "h3" %>
-        <%= f.text_field :phone_number, class: 'login-input' %>
+        <div class="row">
+          <div class="col-2">
+            <%= f.label :phone_number, class: "h3" %>
+          </div>
+          <div class="col-10">
+            <%= f.text_field :phone_number, class: 'login-input' %>
+          </div>
+        </div>
       </div>
 
       <div class="field">
-        <%= f.label :password, class: "h3" %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %>
-        <%= f.password_field :password, autocomplete: "off", class: 'login-input' %>
+        <div class="row">
+          <div class="col-2">
+            <%= f.label :password, class: "h3" %>
+          </div>
+          <div class="col-10">
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "off", class: 'login-input' %>
+          </div>
+        </div>
       </div>
 
       <div class="field">
-        <%= f.label :password_confirmation, class: "h3" %>
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'login-input' %>
+        <div class="row">
+          <div class="col-2">
+            <%= f.label :password_confirmation, class: "h3" %>
+          </div>
+          <div class="col-10">
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'login-input' %>
+          </div>
+        </div>
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up" %>
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <%= f.submit "Sign up", class: "signupbtn"%>
       </div>
     <% end %>
     <div class="clearfix">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
     </div>
     </br>
   </div>
