--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,10 +34,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
         </li>
+        <li class="nav-item">
+          <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav-link") %>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+
+<br>
 
 <!-- Page Content -->
 <div class="container">
