--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @listing, :html => {multipart: true} do |f| %>
-  <% if listing.errors.any? %>
+  <% if @listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
 
       <ul>
-      <% listing.errors.full_messages.each do |message| %>
+      <% @listing.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -26,9 +26,12 @@
     <%= f.text_field :owner %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :image %>
-    <%= f.file_field :image, class: 'form-control'%>
+  <div class="control-group">
+    <%= f.label :pictures, :class => 'control-label' %>
+    <div class="controls">
+      <%= file_field_tag "images[]", type: :file, multiple: true %>
+    </div>
+
   </div>
 
   <div class="field">
