Adding link to view all listings and cleaning up create new.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,8 +12,14 @@
             <span class="sr-only">(current)</span>
           </a>
         </li> -->
-        <li class="nav-item">
-          <%= link_to('Create Listing', new_listing_path, class: "nav-link") %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Listings
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <%= link_to('View All', listings_path, class: "dropdown-item") %>
+            <%= link_to('Create New', new_listing_path, class: "dropdown-item") %>
+          </div>
         </li>
         <li class="nav-item">
           <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav-link") %>
