Making money look better

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -48,7 +48,7 @@
         <td><%= listing.tags %></td>
         <td><%= listing.location %></td>
         <td><%= listing.description %></td>
-        <td><%= listing.price %></td>
+        <td><%= humanized_money_with_symbol listing.price %></td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
         <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
