--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,21 @@
  @import "bootstrap";
 
  body {
- //  background-color:black !important;  
+ //  background-color:black !important;
+ }
+
+ html, body {
+ height: 100%;
+ margin: 0;
+ }
+ .wrapper {
+   min-height: 100%;
+
+   /* Equal to height of footer */
+   /* But also accounting for potential margin-bottom of last child */
+   margin-bottom: -78px;
+ }
+ .footer,
+ .push {
+   height: 78px;
  }
