--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,14 @@
   </head>
 
   <body>
-    <%= render 'layouts/nav' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div class="container-fluid">
-      <%= yield %>
+    <div class="wrapper">
+      <%= render 'layouts/nav' %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <div class="container-fluid">
+        <%= yield %>
+      </div>
+      <div class="push"></div>
     </div>
     <%= render 'layouts/footer' %>
   </body>
