--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,9 +1,8 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listings</h1>
+<h1>Listings <%= " in the #{Category.find(params[:category_id]).name.titleize} category" if params[:category_id] %> </h1>
+<br>
 
 <div class="row">
-  <% @listings.last(6).each do |listing| %>
+  <% @listings.each do |listing| %>
   <%= render listing %>
   <% end %>
 </div>
