Cleaning up new and edit pages for listings

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -13,17 +13,17 @@
 
     <div class="field">
       <%= f.label :title %>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class: "form-control" %>
     </div>
 
     <div class="field">
       <%= f.label :category %>
-      <%= f.collection_select(:category_id, Category.all, :id, :name, :prompt => true) %>
+      <%= f.collection_select(:category_id, Category.all, :id, :name, {:prompt => true}, {class: "form-control"}) %>
     </div>
 
     <div class="field">
       <%= f.label :owner %>
-      <%= f.text_field :owner %>
+      <%= f.text_field :owner, class: "form-control" %>
     </div>
 
     <div class="control-group">
@@ -44,22 +44,22 @@
 
     <div class="field">
       <%= f.label :tags %>
-      <%= f.text_field :tags %>
+      <%= f.text_field :tags, class: "form-control" %>
     </div>
 
     <div class="field">
       <%= f.label :location %>
-      <%= f.text_field :location %>
+      <%= f.text_field :location, class: "form-control" %>
     </div>
 
     <div class="field">
       <%= f.label :description %>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, class: "form-control" %>
     </div>
 
     <div class="field">
       <%= f.label :price %>
-      <%= f.text_field :price %>
+      <%= f.text_field :price, class: "form-control" %>
     </div>
 
     <div class="actions">
