--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,9 @@
  .navbar .dropdown-toggle:after{
   display:none;
  }
+
+ .brand-text {
+    padding-top: 10px !important;
+    font-size: 150%;
+    color: white !important;
+ }
