--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,10 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <%= link_to "UNO CLASSIFIEDS", root_path, class: "navbar-brand" %>
+    <div class="navbar-brand">
+      <%= image_tag('uno_logo.png', size: "40x40", class: "d-inline-block align-top") %>
+      &nbsp;<%= link_to "UNO CLASSIFIEDS", root_path, class: "brand-text" %>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
