--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,62 +1,108 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html lang="en">
 
-<p>
-  <strong>Title:</strong>
-  <%= @listing.title %>
-</p>
+  <head>
 
-<p>
-  <strong>Category:</strong>
-  <%= @listing.category.name %>
-</p>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<p>
-  <strong>Owner:</strong>
-  <%= @listing.owner %>
-</p>
+    <title>ShowPage</title>
 
-<p>
-  <strong>Pictures:</strong>
-  
-  <div class="row">
-    <ul class="thumbnails files">
-      <% unless @pictures.empty? %>
-          <% @pictures.each do |pic| %>
-              <li class="span3" id="picture_<%= pic.id %>">
-                <div class="thumbnail">
-                  <%= image_tag pic.image.url %>
-                  <div class="caption">
-                    <p style="text-align: center;">
-                      <%= link_to "Delete picture", pic, method: :delete, data: { confirm: 'Ok??'} %>
-                    </p>
-                  </div>
-                </div>
-              </li>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/portfolio-item.css" rel="stylesheet">
+
+  </head>
+
+  <body background="background.JPG">
+
+
+    <!-- Navigation -->
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">UNO Classified</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav> -->
+
+    <!-- Page Content -->
+    <div class="container">
+
+       <!-- Portfolio Item Heading -->
+      <h1 class="my-4">
+        <%= @listing.title %>
+      </h1>
+
+      <!-- Portfolio Item Row -->
+      <div class="row">
+
+        <div class="col-md-8">
+          <% if @listing.pictures.first %>
+           <%= image_tag @listing.pictures.first.image.url(:big), :class => "img-fluid" %>
           <% end %>
-      <% end %>
-    </ul>
-  </div>
-</p>
+        </div>
 
-<p>
-  <strong>Tags:</strong>
-  <%= @listing.tags %>
-</p>
+        <div class="col-md-4">
+          <h2 class="my-3">Item Description</h2>
+           <%= @listing.description %>
+           <br>
+           <br>
+          <div class="category"> <h2>Category: <%= @listing.category.name %> </h2></div>
+          <div class="tags"> <h2> Tags: <%= @listing.tags %> </h2></div>
+			    <div class="price"> <h2> Price: <%= @listing.price %></h2></div>
+			    <br>
 
-<p>
-  <strong>Location:</strong>
-  <%= @listing.location %>
-</p>
+		      <button type="button" class="btn btn-primary btn-lg">Contact Seller</button>
+        </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
+      </div>
+      <!-- /.row -->
 
-<p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
-</p>
+      <!-- Related Projects Row -->
+      <h3 class="my-4">More Images</h3>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+      <div class="row">
+        <% @listing.pictures.drop(1).each do |pic| %>
+        <div class="col-md-3 col-sm-6 mb-4">
+          <%= image_tag pic.image.url(:medium), :class => "img-fluid" %>
+        </div>
+        <% end %>
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
+</html>
