--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,8 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="https://cdn.arstechnica.net/wp-content/uploads/2017/04/Audi-R8-LMS-GT4-1-800x451.jpg" alt="First slide">
+            <%= link_to image_tag(@listings.last.pictures.first.image.url(:large)),
+                        listing_path(@listings.last), target: '_blank', :class => 'd-block img-fluid'  %>
           </div>
           <div class="carousel-item">
             <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
