--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,7 +56,7 @@
       </div>
 
       <div class="row">
-        <% recent_listings(6).each do |listing| %>
+        <% recent_listings(6).try(:each) do |listing| %>
         <%= render listing %>
         <% end %>
       </div>
