Update listing views for tags support

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -38,8 +38,8 @@
     </div>
 
     <div class="field">
-      <%= f.label :tags %>
-      <%= f.text_field :tags, class: "form-control" %>
+      <%= f.label :all_tags %>
+      <%= f.text_area :all_tags, placeholder: 'Tags separated by commas' %>
     </div>
 
     <div class="field">
