--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -31,11 +31,14 @@
         <td><%= listing.title %></td>
         <td><%= listing.location %></td>
         <td><%= listing.description %></td>
+        <td><%= listing.all_tags %></td>
         <td><%= humanized_money_with_symbol listing.price %></td>
 
       </tr>
     <% end %>
   </tbody>
+</table>
+
 
   <% else %>
 
