clean up some formatting

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listings <%= " in the #{Category.find(params[:category_id]).name.titleize} category" if params[:category_id] %>
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expaneded="false">
-      View
+      <%= current_user.listing_view_type.titleize %>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
       <%= link_to('Grid', { :controller => :listings, :action => :grid }, class: "dropdown-item") %>
@@ -9,7 +9,6 @@
     </div>
   </div>
 </h1>
-<p>View type: <%= current_user.listing_view_type.titleize %></p>
 <br>
 
 <% if current_user.listing_view_type == "list" %>
@@ -36,6 +35,7 @@
       </tr>
     <% end %>
   </tbody>
+</table>
 
   <% else %>
 
