--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,14 @@
   display:none;
  }
 
+.navbar-color {
+  background-color: #5bc64e!important;
+}
+
+.dropdown-toggle:visited {
+  text-decoration: none; color: white;
+}
+
  .brand-text {
     padding-top: 10px !important;
     font-size: 150%;
