--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="py-5 bg-dark">
+<footer class="py-5 navbar-color">
   <div class="container">
     <p class="m-0 text-center text-white">@2017 UNO Agile Team</p>
   </div>
