--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-color fixed-top">
   <div class="container">
     <div class="navbar-brand">
       <%= image_tag('uno_logo.png', size: "40x40", class: "d-inline-block align-top") %>
@@ -15,7 +15,7 @@
             <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="glyphicon glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>&nbsp;Listings
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <%= link_to('View All', listings_path, class: "dropdown-item") %>
               <%= link_to('Create New', new_listing_path, class: "dropdown-item") %>
             </div>
@@ -30,7 +30,13 @@
               <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "dropdown-item") %>
             </div>
           </li>
-        <% end %>
+
+            <li class="nav-item">
+            <%= link_to root_path, class: "nav-link" do %>
+                <i class="glyphicon glyphicon-home"></i> Home
+            <% end %>
+            </li>
+      <% end %>
       </ul>
     </div>
   </div>
