Implemented the Home button on the Nav-bar

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,9 +31,9 @@
             </div>
           </li>
 
-            <li class="nav-item">
-            <%= link_to root_path, class: "nav-link" do %>
-                <i class="glyphicon glyphicon-home"></i> Home
+            <li class="nav-item" >
+            <%= link_to root_path, class: "nav-link home-button" do  %>
+                <i class="glyphicon glyphicon-home" ></i> Home
             <% end %>
             </li>
       <% end %>
