--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,11 @@
   text-decoration: none; color: white;
 }
 
+.home-button:visited {
+  text-decoration: none; color: white;
+}
+
+
  .brand-text {
     padding-top: 10px !important;
     font-size: 150%;
