--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -42,7 +42,7 @@
 
     <div class="field">
       <%= f.label :all_tags %>
-      <%= f.text_area :all_tags, placeholder: 'Tags separated by commas' %>
+      <%= f.text_field :all_tags, placeholder: 'Tags separated by commas' %>
     </div>
 
     <div class="field">
