Keeps filters persistent on view change
- Adds params to grid/list redirect
- Adds param verification in controller in redirect

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -5,8 +5,8 @@
       <%= current_user.listing_view_type.titleize %>
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-      <%= link_to('Grid', { :controller => :listings, :action => :grid }, class: "dropdown-item") %>
-      <%= link_to('List', { :controller => :listings, :action => :list }, class: "dropdown-item") %>
+      <%= link_to('Grid', { :controller => :listings, :action => :grid, :params => params }, class: "dropdown-item") %>
+      <%= link_to('List', { :controller => :listings, :action => :list, :params => params }, class: "dropdown-item") %>
     </div>
   </div>
 </h1>
