--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-color fixed-top">
   <div class="container">
     <div class="navbar-brand">
-      <%= image_tag('uno_logo.png', size: "40x40", class: "d-inline-block align-top") %>
+      <%= link_to image_tag('uno_logo.png', size: "40x40", class: "d-inline-block align-top"), root_path, :class => 'a-blank' %>
       &nbsp;<%= link_to "UNO CLASSIFIEDS", root_path, class: "brand-text" %>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
