--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,8 +9,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
+    <%= f.submit 'Send me reset password instructions', class: 'btn btn-primary' %>
   </div>
 <% end %>
 
-<%= link_to "Go back to login", root_path %>
+<%= link_to 'Go back to login', root_path %>
