--- a/app/views/devise/registrations/_modal.html.erb
+++ b/app/views/devise/registrations/_modal.html.erb
@@ -7,7 +7,7 @@
       <div class="field">
         <div class="row">
           <div class="col-2">
-            <%= f.label :name, class: "h3" %>
+            <%= f.label :name, class: 'h3' %>
           </div>
           <div class="col-10">
             <%= f.text_field :name, class: 'login-input' %>
@@ -18,7 +18,7 @@
       <div class="field">
         <div class="row">
           <div class="col-2">
-            <%= f.label :email, class: "h3" %>
+            <%= f.label :email, class: 'h3' %>
           </div>
           <div class="col-10">
             <%= f.email_field :email, autofocus: true, class: 'login-input' %>
@@ -29,7 +29,7 @@
       <div class="field">
         <div class="row">
           <div class="col-2">
-            <%= f.label :phone_number, class: "h3" %>
+            <%= f.label :phone_number, class: 'h3' %>
           </div>
           <div class="col-10">
             <%= f.text_field :phone_number, class: 'login-input' %>
@@ -40,13 +40,13 @@
       <div class="field">
         <div class="row">
           <div class="col-2">
-            <%= f.label :password, class: "h3" %>
+            <%= f.label :password, class: 'h3' %>
           </div>
           <div class="col-10">
             <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
             <% end %>
-            <%= f.password_field :password, autocomplete: "off", class: 'login-input' %>
+            <%= f.password_field :password, autocomplete: 'off', class: 'login-input' %>
           </div>
         </div>
       </div>
@@ -54,17 +54,17 @@
       <div class="field">
         <div class="row">
           <div class="col-2">
-            <%= f.label :password_confirmation, class: "h3" %>
+            <%= f.label :password_confirmation, class: 'h3' %>
           </div>
           <div class="col-10">
-            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'login-input' %>
+            <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'login-input' %>
           </div>
         </div>
       </div>
 
       <div class="actions">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <%= f.submit "Sign up", class: "signupbtn"%>
+        <%= f.submit 'Sign up', class: 'signupbtn'%>
       </div>
     <% end %>
     <div class="clearfix">
