--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -18,7 +18,7 @@
 
     <div class="field">
       <%= f.label :category %>
-      <%= f.collection_select(:category_id, Category.all, :id, :name, {:prompt => true}, {class: "form-control"}) %>
+      <%= f.collection_select(:category_id, Category.all, :id, :name, {:prompt => true}, {class: 'form-control'}) %>
     </div>
 
     <div class="field">
