--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,19 +10,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
 
+    <% logger.debug "In nav view - current_name: #{controller_name}" %>
+    <% logger.debug "In nav view - action_name: #{action_name}" %>
+    <% if controller_name != 'registrations' && (controller_name != 'listings' || action_name != 'show') %>
       <ul class="nav-item">
-        <form class="form-inline my-2 my-lg-0 mr-lg-2 ">
-          <div class="input-group">
-            <input class="form-control search-bar" type="text" placeholder="search for....">
-            <span class="input-group-btn">
-            <button class="btn btn-primary search-btn" type="button">
-              <i class="glyphicon glyphicon glyphicon-search">
-              </i>
-            </button>
-          </span>
-          </div>
-        </form>
+        <%= form_for listings_path, method: :get do |f| %>
+          <p>
+            <%= f.label "Search for" %>
+            <%= text_field_tag :search, params[:search] %>
+            <%= submit_tag "Go", name: nil %>
+          </p>
+        <% end %>
       </ul>
+    <% end %>
 
       <ul class="navbar-nav ml-auto">
         <% if current_user %>
