--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -50,7 +50,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <div class="modal-header">
-            <h1>Contact Listing Owner<h1>
+            <h1>Contact Listing Owner</h1>
             <span class="close">&times;</span>
             <h2></h2>
           </div>
@@ -79,12 +79,12 @@
           // When the user clicks the button, open the modal
           btn.onclick = function() {
               modal.style.display = "block";
-          }
+          };
 
           // When the user clicks on <span> (x), close the modal
           span.onclick = function() {
               modal.style.display = "none";
-          }
+          };
 
           // When the user clicks anywhere outside of the modal, close it
           window.onclick = function(event) {
