carousel-Home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,15 +35,18 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
+          <div class="item active">
             <%= last_picture %>
           </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-          </div>
+
+            <% Listing.has_picture[1...-1].each do |listing| %>
+              <div class="item">
+                 <%= link_to image_tag(listing.pictures.first.image.url(:large)),
+                            listing_path(listing), target: '_blank', :class => 'd-block img-fluid' %>
+              </div>
+                <% end %>
+
+
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -73,3 +76,4 @@
 </body>
 
 </html>
+
