--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -97,6 +97,7 @@
 
       </div>
       <!-- Related Projects Row -->
+      <% if @listing.pictures.count > 1 %>
       <h3 class="my-4">More Images</h3>
 
       <div class="row">
@@ -106,6 +107,7 @@
         </div>
         <% end %>
       </div>
+      <% end %> 
       <!-- /.row -->
 
     </div>
