--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -108,7 +108,7 @@
             <h2></h2>
           </div>
           <div class="modal-body">
-            <%= image_tag google_map(center: @listing.location) %>
+            <%= image_tag google_map(@listing.location) %>
           </div>
           <div class="modal-footer">
             <h3></h3>
@@ -156,7 +156,7 @@
         </div>
         <% end %>
       </div>
-      <% end %> 
+      <% end %>
       <!-- /.row -->
 
     </div>
