Increase item description text size

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -31,8 +31,10 @@
         </div>
 
         <div class="col-md-4">
-          <h2 class="my-3">Item Description</h2>
-           <%= @listing.description %>
+          <h2 class="my-3"><b>Item Description</h2></b>
+           <h4> <%= @listing.description %> </h4>
+           <br>
+           <br>
            <br>
            <br>
           <div class="category"> <h2>Category: <%= @listing.category.name %> </h2></div>
